# kdoubanfm

./: CMakeLists.txt  Messages.sh  account.ui  kdoubanfm.cpp  kdoubanfm.desktop  kdoubanfm.h  kiogetdevice.cpp  kiogetdevice.h  main.cpp  mpris2.cpp  mpris2.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml  trayicon.cpp  trayicon.h
po/: CMakeLists.txt  kdoubanfm.pot  zh_CN.po
